--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #fffbee;
+  background-color: #1b1b1b;
 }
 
 canvas {
